# pico_logic

./: .gitignore  CMakeLists.txt  README.md  commands.c  commands.h  eeprom_24lc02b.h  main.c  main.h  main_vxi.c  rp2040-logic-analyzer.c  rp2040-logic-generator.c  rpc_server.h  usb_descriptors.c  usbtmc.pio  usbtmc_app.c  vxi_core_prog.c  vxi_core_prog.h
apps/: CMakeLists.txt  commands.c  commands.h
apps/usbtmc/: CMakeLists.txt  main.c  tusb_config.h
apps/vxitmc/: CMakeLists.txt  eeprom_24lc02b.c  lwipopts.h  main_vxi.c  rpc_server.c  rpc_server.h  vxi_core_prog.c
apps/vxitmc/include/: rpc_server.h
libs/: CMakeLists.txt
libs/logicanalyser-lib/: CMakeLists.txt  rp2040-logic-analyzer.c  rp2040-logic-generator.c
libs/logicanalyser-lib/include/: logic_analyser.h
logicanalyser-lib/: CMakeLists.txt  rp2040-logic-analyzer.c  rp2040-logic-generator.c
python/: example.py
